# wayland_from_scratch

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  license.h  main.c
